Fixed font weight bug : unreadable in chrome/safari if weight below 400

--- a/src/components/Ui/DropDown.css
+++ b/src/components/Ui/DropDown.css
@@ -29,7 +29,7 @@
 }
 
 .dropdown__content {
-	font-weight: 300;
+	font-weight: 400;
 	padding: 30px 27px 19px 17px;
 	color: var(--primary-color);
 }
